add install openssh-clients

--- a/cubrid-docker/10.1.2.7694/Dockerfile
+++ b/cubrid-docker/10.1.2.7694/Dockerfile
@@ -13,6 +13,7 @@ RUN yum install -y epel-release; \
                    nc \
                    expect \
                    openssh-server \
+                   openssh-clients \
                    java-1.8.0-openjdk-devel; \
     yum clean all;
 
