add install wget

--- a/cubrid-docker/10.1.2.7694/Dockerfile
+++ b/cubrid-docker/10.1.2.7694/Dockerfile
@@ -11,6 +11,7 @@ RUN yum install -y epel-release; \
                    net-tools \
                    telnet \
                    nc \
+                   wget \
                    expect \
                    openssh-server \
                    openssh-clients \
