--- a/cubrid-docker/9.3.9.0002/Dockerfile
+++ b/cubrid-docker/9.3.9.0002/Dockerfile
@@ -11,6 +11,7 @@ RUN yum install -y epel-release; \
                    net-tools \
                    telnet \
                    nc \
+                   wget \
                    expect \
                    openssh-server \
                    openssh-clients \
